apps/production/apps/pve-proxy/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve-proxy
  namespace: pve-proxy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pve.home.lewelly.com
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  parentRefs:
    - name: home-gateway
      namespace: cilium-gateway
  hostnames:
    - pve.home.lewelly.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pve-proxy
          port: 8080
